# seven-days

./: app.py  config.py  main.py  merch.db  pyproject.toml  sales_data.json  seven.db  store_data.json  weather.py
app/database/: base.py  base_dao.py  session.py
app/items/: crud.py  dao.py  model.py  router.py
app/migration/versions/: 418a0dd90a7a_initial_revision.py
src/database/: base.py  session.py
src/items/: dao.py  model.py  router.py  schemas.py
src/migration/: env.py
src/templates/items/: index.html
static/css/: styles.css
templates/: add_item.html  base.html  edit_item.html  error.html  home.html  item_detail.html  items.html  login.html  low_stock.html  new_sale.html  sale_detail.html  sales.html  statistics.html
